--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,17 @@ jobs:
       - uses: ./action-a
         with:
           MY_NAME: "Mona"
+###### TEST ADD FILE AND COMMIT
+      - uses: actions/checkout@master
+      - name: Create local changes
+        run: |
+          date >> test_file
+      - name: Commit files
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -m "Add changes" -a
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
