--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -22,9 +22,9 @@ jobs:
           FOLDER=comments
           printf '%b\n' "<div class=\"comment\"><p>${AUTHOR} says:</p><p>${NO_TAGS//$'\n'/\<\/p\>\<p\>}</p><p>${DATE}</p></div>\r\n" > ${ID}.html
 
-          echo ${{ github.event.issue.number }} >> ${ID}.html
-          echo ${{ github.event.issue.title }} >> ${ID}.html
-          echo ${{ github.event.issue.body }} >> ${ID}.html
+          echo "${{ github.event.issue.number }}" >> ${ID}.html
+          echo "${{ github.event.issue.title }}" >> ${ID}.html
+          echo "${{ github.event.issue.body }}" >> ${ID}.html
       - name: Commit files
         run: |
           git config --local user.email "action@github.com"
