--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -6,13 +6,11 @@ jobs:
   build:
     name: Hello world action
     runs-on: ubuntu-latest
+    if: github.event.comment.body == "publish"
     steps:
       - uses: actions/checkout@master
-      - name: Create local changes
-        run: |
-          date >> test_file
-
       - name: Turn comment into file
+        if: success()
         run: |
           ID=${{ github.event.comment.id }}
           AUTHOR=${{ github.event.comment.user.login }}
@@ -24,14 +22,16 @@ jobs:
 
           echo "${{ github.event.issue.number }}"
           echo "${{ github.event.issue.title }}"
-          echo "${{ github.event.issue.body }}" 
+          echo "${{ github.event.issue.body }}"
       - name: Commit files
+        if: success()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add --all
           git commit -m "Add changes" -a
       - name: Push changes
+        if: success()
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
