--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -23,6 +23,8 @@ jobs:
           echo "${{ github.event.issue.number }}"
           echo "${{ github.event.issue.title }}"
           echo "${{ github.event.issue.body }}"
+
+          echo "${{ github.event.comment.body }}"
       - name: Commit files
         if: success()
         run: |
