--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     name: Hello world action
     runs-on: ubuntu-latest
+    if: 'DISABLE THIS WORKFLOW' == 'true'    
     steps:
       - uses: actions/checkout@v1
       - uses: ./action-a
