--- a/.github/workflows/create_jekyll_post_from_issue.yaml
+++ b/.github/workflows/create_jekyll_post_from_issue.yaml
@@ -27,11 +27,11 @@ jobs:
           git config --local user.name '$GIT_USER_NAME'
           git config --local user.email '$GIT_USER_EMAIL'
           git add --all
-          git commit -m "Add changes" -a
+          git commit -m "$DEFAULT_COMMIT_MESSAGE" -a
         env:
           GIT_USER_NAME: 'Giovanni Sciortino'
           GIT_USER_EMAIL: 'giovannisciortino@gmail.com'
-
+          DEFAULT_COMMIT_MESSAGE: 'New jekyll post create from github issue'
       - name: Push changes
         if: success()
         uses: ad-m/github-push-action@master
