--- a/.github/workflows/create_jekyll_post_from_issue.yaml
+++ b/.github/workflows/create_jekyll_post_from_issue.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: Create jekyll post file
-        if: success() && github.event.issue.user.login == 'giovannisciortino'
+        if: success() && github.event.issue.user.login == env.GITHUB_ACCOUNT_JEKYLL_OWNER
         run: |
           cat << 'EOF' > $POST_DIRECTORY/${{ github.event.issue.title }}
           ${{ github.event.issue.body }}
@@ -24,14 +24,15 @@ jobs:
       - name: Commit files
         if: success()
         run: |
-          git config --local user.name '$GIT_USER_NAME'
-          git config --local user.email '$GIT_USER_EMAIL'
+          git config --local user.name "$GIT_USER_NAME"
+          git config --local user.email "$GIT_USER_EMAIL"
           git add --all
           git commit -m "$DEFAULT_COMMIT_MESSAGE" -a
         env:
           GIT_USER_NAME: 'Giovanni Sciortino'
           GIT_USER_EMAIL: 'giovannisciortino@gmail.com'
           DEFAULT_COMMIT_MESSAGE: 'New jekyll post create from github issue'
+
       - name: Push changes
         if: success()
         uses: ad-m/github-push-action@master
